@startuml Factory

skinparam BackGroundColor #3c3f41


skinparam class {
    BorderColor #cbd5d6
    ArrowColor #589df6
    BackGroundColor #645e4d
}

class Product{
    + ~Product() : virtual
    ..
    # Product()
}

class ConcreteProduct{
    + ConcreteProduct()
    + ~ConcreteProduct()
    ..
}

interface IFactory{
    + CreateProduct() : Product*
}

class Factory{
    + CreateProduct() : virtual Product*
    + ~Factory() : virtual
    ..
    # Factory()
    
}

class ConcreteFactory{
    + ConcreteFactory()
    + CreateProduct() : Product*
    + ~ConcreteFactory()
    ..
}

ConcreteFactory .left.> ConcreteProduct
ConcreteProduct -up-|> Product
Factory .left.> Product
ConcreteFactory -up-|> Factory
Factory .up.> IFactory : implement


@enduml